# anima-mlx

./: .gitignore  LICENSE  README.md
oracle/: ARCHITECTURE.md  adapter_oracle.py  anima_oracle.py  dump_goldens.py  pipeline_oracle.py  pyproject.toml  qwen3_oracle.py
python/: PIPELINE.md  generate.py  pyproject.toml
python/anima_mlx/: pipeline.py  tokenizer.py  weights.py
python/anima_mlx/models/: cosmos_dit.py  llm_adapter.py  qwen3_te.py  wan_vae.py
python/tests/: validate_bf16.py  validate_quant.py
python/tests/parity/: probe_sampler.py  test_adapter_parity.py  test_dit_parity.py  test_pipeline_parity.py  test_qwen3_parity.py  test_tokenizer_parity.py  test_vae_parity.py
python/tools/: export_mlx_weights.py
swift/: Package.resolved
